--- a/templates/index.html
+++ b/templates/index.html
@@ -7,22 +7,28 @@
 {% block body %}
 <div class="content">
     <h1>Task Master</h1>
+    {% if tasks|length < 1 %}
+    <h4>There are no tasks. Create one below!</h4>
+    {% else %}
     <table>
         <tr>
             <th>Task</th>
             <th>Date added</th>
             <th>Actions</th>
         </tr>
+        {% for task in tasks %}
         <tr>
-            <td></td>
-            <td></td>
+            <td>{{ task.content }}</td>
+            <td>{{ task.date_created.date() }}</td>
             <td>
-                <a href="">DELETE</a>
+                <a href="/delete/{{task.id}}">DELETE</a>
                 <br>
-                <a href="">UPDATE</a>
+                <a href="/update/{{task.id}}">UPDATE</a>
             </td>
         </tr>
+        {% endfor %}
     </table>
+    {% endif %}
     <form action="/" method="POST">
         <input type="text" name="content" id="content">
         <input type="submit" value="Add Task">
